tests/neg-custom-args/captures/mutable-inheritance.check
-- Error: tests/neg-custom-args/captures/mutable-inheritance.scala:4:8 -------------------------------------------------
4 |  class A extends E, caps.Mutable // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  reference (c : Object^) is not included in the allowed capture set {cap} of the self type of class A
  |
  |  where:    cap is a fresh root capability classified as Mutable in the type of class A
-- Error: tests/neg-custom-args/captures/mutable-inheritance.scala:7:16 ------------------------------------------------
7 |class C extends B(??? : Int => Int), caps.Mutable // error
  |                ^^^^^^^^^^^^^^^^^^^
  |                illegal inheritance: class C which extends `Mutable` is not allowed to also extend class B
  |                since class B retains exclusive capabilities but does not extend `Mutable`.
-- Error: tests/neg-custom-args/captures/mutable-inheritance.scala:18:16 -----------------------------------------------
18 |class H extends G, caps.Mutable // error
   |                ^
   |                illegal inheritance: class H which extends `Mutable` is not allowed to also extend class G
   |                since class G retains exclusive capabilities but does not extend `Mutable`.
